Fixed text overflow in user section and logo position on small screens

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -15,7 +15,7 @@
   }
 
   .header__logo {
-    padding-left: 10px;
+    padding-left: 27px;
     width: 126px;
     min-height: 24px;
   }
